Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110266

affine example crashes when moving the center hoverpoint

XMLWordPrintable

    • macOS
    • 9d8473cdf (dev), 7378c709f (6.7), acfe26b16 (6.6), 7f0380c5d (tqtc/lts-6.5)
    • G&UI Finishing 2023

      Repro:

      • Start examples/widgets/painting/affine
      • Stop animation
      • Move the center hoverpoint around with the trackpad (did not test with mouse or touch). It usually crashes after a second or two

      Strangely enough, the backtrace.txt indicates that there is a TouchUpdate event (I was under the impression that trackpad events only generate Mouse events)

       

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vhilshei Volker Hilsheimer
            smd Jan Arve
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes